--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ gunicorn==21.2.0
 loguru==0.7.2
 requests==2.31.0
 aiohttp==3.9.3
+aiosqlite==0.20.0
 beautifulsoup4==4.12.3
 openai==1.13.3
 langchain==0.1.10
@@ -11,3 +12,5 @@ tiktoken==0.6.0
 gradio==4.19.2
 python-dotenv==1.0.1
 redis==5.0.3
+PyJWT==2.8.0
+werkzeug==3.0.1
